--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
     <!-- Centered link -->
     <div class="topnav-centered">
-      <h1><a href="#index.html" class="active">SmartTech</a></h1>
+      <h1><a href="./index.html" class="active">SmartTech</a></h1>
     </div>
     
     <!-- left menu drop down -->
     <div class = "dropmenu">
     <button class="dropmbtn">Menu</button>
       <div class="dropdown-content">
-      <a href="#index.html">Home</a>
-      <a href="#Apple.html">Apple Products</a>
+      <a href="./index.html">Home</a>
+      <a href="./Apple.html">Apple Products</a>
       <a href="#">Samsung Products</a>
       <a href="#">SkullCandy Products</a>
       </div>
@@ -59,7 +59,7 @@
   <p>Brands</p>
   <hr class="bar">
   <p> </p>
-  <a href="#Apple.html"><button class="navbutton">Apple</button></a>
+  <a href="./Apple.html"><button class="navbutton">Apple</button></a>
   <button class="navbutton">Samsung</button>
   <button class="navbutton">SkullCandy</button>
 
