--- a/AboutUs.html
+++ b/AboutUs.html
@@ -18,15 +18,15 @@
 
     <!-- Centered link -->
     <div class="topnav-centered">
-      <h1><a href="#index.html" class="active">SmartTech</a></h1>
+      <h1><a href="./index.html" class="active">SmartTech</a></h1>
     </div>
     
     <!-- left menu drop down -->
     <div class = "dropmenu">
     <button class="dropmbtn">Menu</button>
       <div class="dropdown-content">
-      <a href="#index.html">Home</a>
-      <a href="#Apple.html">Apple Products</a>
+      <a href="./index.html">Home</a>
+      <a href="./Apple.html">Apple Products</a>
       <a href="#">Samsung Products</a>
       <a href="#">SkullCandy Products</a>
       </div>
@@ -34,7 +34,7 @@
 
     <!-- Right-aligned links -->
     <div class="topnav-right">
-      <a href="#AboutUs.html">About Us</a>
+      <a href="./AboutUs.html">About Us</a>
       <a href="#cart">Cart</a>
     </div>
     
@@ -60,7 +60,7 @@
 </div>
 
 <p> </p>
-<a href="#index.html"><button class="navbutton">Home</button></a>
+<a href="./index.html"><button class="navbutton">Home</button></a>
 <button class="navbutton">Browse</button>
 
 
