--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Right-aligned links -->
     <div class="topnav-right">
-      <a href="#AboutUs.html">About Us</a>
+      <a href="./AboutUs.html">About Us</a>
       <a href="#cart">Cart</a>
       
     </div>
