--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
     <h2>Everything You Need Here at SmartTech</h2>
     <p>SmartTech offers a variety of electronic accessories from different brands. From apple to Samsung and other smaller brands, shop here today.</p>
   </div>
+         
+  <p>Broswe through all our products here.</p>
+  <a href="./AllProducts.html"><button class="navbutton">Apple</button></a>
 
+  <p></p>p       
+         
   <p>Brands</p>
   <hr class="bar">
   <p> </p>
