--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
          
   <p>Broswe through all our products here.</p>
-  <a href="./AllProducts.html"><button class="navbutton">Apple</button></a>
+  <a href="./AllProducts.html"><button class="navbutton">All Products</button></a>
 
   <p></p>p       
          
