--- a/AboutUs.html
+++ b/AboutUs.html
@@ -83,7 +83,7 @@
 
 <p> </p>
 <a href="./index.html"><button class="navbutton">Home</button></a>
-<button class="navbutton">Browse</button>
+<a href="./AllProducts.html"><button class="navbutton">Browse</button></a>
 
 
 </body>
