--- a/Samsung.html
+++ b/Samsung.html
@@ -24,7 +24,7 @@
       <a href="./index.html">Home</a>
       <a href="./Apple.html">Apple Products</a>
       <a href="./Samsung.html">Samsung Products</a>
-      <a href="#">SkullCandy Products</a>
+      <a href="./SkullCandy.html">SkullCandy Products</a>
       </div>
     </div>
  <a href="./AboutUs.html">About Us</a>
