--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   <hr class="bar">
   <p> </p>
   <a href="./Apple.html"><button class="navbutton">Apple</button></a>
-  <button class="navbutton">Samsung</button>
-  <button class="navbutton">SkullCandy</button>
+  <a href="./Samsung.html"><button class="navbutton">Samsung</button></a>
+  <a href="./SkullCandy.html"><button class="navbutton">SkullCandy</button></a>
 
   <p>Products</p>
   <hr class="bar">
