--- a/AllProducts.html
+++ b/AllProducts.html
@@ -23,8 +23,8 @@
       <div class="dropdown-content">
       <a href="./index.html">Home</a>
       <a href="./Apple.html">Apple Products</a>
-      <a href="#">Samsung Products</a>
-      <a href="#">SkullCandy Products</a>
+      <a href="./Samsung.html">Samsung Products</a>
+      <a href="./SkullCandy.html">SkullCandy Products</a>
       </div>
     </div>
     <a href="./AboutUs.html">About Us</a>
