--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
   <p>Products</p>
   <hr class="bar">
   <p> </p>
-  <button class="navbutton">Audio</button>
-  <button class="navbutton">Cables</button>
-  <button class="navbutton">Cases</button>
+  <a href="./Audio.html"><button class="navbutton">Audio</button></a>
+  <a href="./Cables.html"><button class="navbutton">Cables</button></a>
+  <a href="./Cases.html"><button class="navbutton">Cases</button></a>
   </body> 
         
 </html>
