adding cart feature (adjustments are needed)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <!-- Right-aligned links -->
     <div class="topnav-right">
 
-      <button class="open-button" onclick="openForm()">Cart</button>
+      <div class="cart">
+      <button class="open-button" onclick="openForm()">Cart</button></div>
        <div class="form-popup" id="myForm">
         <form action="/action_page.php" class="form-container">
          
@@ -95,6 +96,8 @@
   <a href="./Audio.html"><button class="navbutton">Audio</button></a>
   <a href="./Cables.html"><button class="navbutton">Cables</button></a>
   <a href="./Cases.html"><button class="navbutton">Cases</button></a>
+
+  <script src="app.js"></script>
   </body> 
         
 </html>
