--- a/AllProducts.html
+++ b/AllProducts.html
@@ -70,6 +70,113 @@
   <p>All Products</p>
   <hr class="bar">
   <p> </p>
+ <div class ="product">
+    <h2>Apple AirPods 4</h2>
+    <img src = "images/airpods-4.jpg">
+    <h3>Price: $250 CAD</h3>
+    <p>Post description: Powerful H2 chip delivers clearer calls with voice isolation and a new, hands-free way to interact with Siri. Personalised spatial audio with dynamic head tracking places sound all around you. Rated IP54 dust, sweat and water resistant.</p>
+    <a href = "">Read More</a>
+    </div>
 
+    <hr class="bar">
+    
+    <div class ="product">
+      <h2>Apple AirPods Pro 2</h2>
+      <img src = "images/airpods-pro-2.jpg">
+      <h3>Price: $330 CAD</h3>
+      <p>Post description: Pro-level active noise cancellation, adaptive audio for the right mix of noise control in any environment, transparency mode to hear the world around you and conversation awareness to seamlessly lower your media volume when you speak to someone nearby. IP54 dust, sweat, and water resistant.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>Apple 240W USB-C Charge Cable (2m)</h2>
+      <img src = "images/apple-240w-usb-c.jpg">
+      <h3>Price: $35 CAD</h3>
+      <p>Post description: 2-metre charging cable is made with a woven design with USB-C connectors on both ends and is ideal for charging, syncing and transferring data between USB-C devices. Supports charging of up to 240 watts and transfers data at USB 2 rates.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>Apple USB-C to Lightning Cable (2m)</h2>
+      <img src = "images/airpods-pro-2.jpg">
+      <h3>Price: $40 CAD</h3>
+      <p>Post description: Connect your device with Lightning connector to your USB-C or Thunderbolt-3 (USB-C) enabled device for syncing and charging. Can also use this cable with your Apple 18W, 20W, 29W, 30W, 61W, 87W or 96W USB‑C Power Adapter to charge your iOS device.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>iPhone 16 Pro Silicone Case with MagSafe</h2>
+      <img src = "images/airpods-pro-2.jpg">
+      <h3>Price: $70 CAD</h3>
+      <p>Post description: Made with a 55 per cent recycled silicone material, works seamlessly with Camera Control. With built-in magnets that align perfectly with iPhone 16 Pro, this case offers a magical attach experience and faster wireless charging, every time.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>iPhone 16 Silicone Case with MagSafe</h2>
+      <img src = "images/airpods-pro-2.jpg">
+      <h3>Price: $70 CAD</h3>
+      <p>Post description: Made with a 55 per cent recycled silicone material, works seamlessly with Camera Control. With built-in magnets that align perfectly with iPhone 16, this case offers a magical attach experience and faster wireless charging, every time.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>Samsung Galaxy Buds3 Pro</h2>
+      <img src = "images/galaxy-buds-3-pro.jpg">
+      <h3>Price: $300 CAD</h3>
+      <p>Post description: Ultimate Hi-Fi, iconic design with blade lights and adaptive noise control. IP57 dust, sweat, and water resistant.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>Samsung Fast Charge Travel Charger with Micro USB and USB-C combo cable</h2>
+      <img src = "images/travel-charger-micro-usb-c.jpg">
+      <h3>Price: $20 CAD</h3>
+      <p>Post description: Fast charge galaxy smartphones with 15 watt 2 amp speed. Includes 5 ft. Micro USB cable with attached Micro USB to USB-C adapter.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>SkullCandy Terrain Wireless Bluetooth Portable Speaker</h2>
+      <img src = "images/terrain-wireless-speaker.jpg">
+      <h3>Price: $90 CAD</h3>
+      <p>Post description: All-Weather audio with ground-thumping bass. Water proof with 14 hour battery life, wireless stero with bluetooth v5.3 and USB-C charging port.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>SkullCandy Push ANC Active earbud</h2>
+      <img src = "images/push-anc-active-earbuds.jpg">
+      <h3>Price: $180 CAD</h3>
+      <p>Post description: Zero-compromise active earbud for the athlete who doesn’t hold back. Comfortable, low-profile ear hangers, fully waterproof construction, adjustable Stay-Aware mode and 4-Mic active noise canceling to get you in the zone.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>SkullCandy Crusher ANC 2</h2>
+      <img src = "images/crusher-anc-2.jpg">
+      <h3>Price: $130 CAD</h3>
+      <p>Post description: Personal Sound and hands-free voice control plus a blend of adjustable 4-mic digital active noise canceling and Crusher Bass that’s so perfect, we had it patented. Experience full sound and amazing bass you can actually feel.</p>
+      <a href = "">Read More</a>
+    </div>
+    
 </body>
 </html>
