--- a/Samsung.html
+++ b/Samsung.html
@@ -71,6 +71,23 @@
   <p>Samsung Products</p>
   <hr class="bar">
   <p> </p>
+<div class ="product">
+      <h2>Samsung Galaxy Buds3 Pro</h2>
+      <img src = "images/galaxy-buds-3-pro.jpg" width="350" height="350">
+      <h3>Price: $300 CAD</h3>
+      <p>Post description: Ultimate Hi-Fi, iconic design with blade lights and adaptive noise control. IP57 dust, sweat, and water resistant.</p>
+      <a href = "">Read More</a>
+    </div>
+
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>Samsung Fast Charge Travel Charger with Micro USB and USB-C combo cable</h2>
+      <img src = "images/travel-charger-micro-usb-c.jpg" width="350" height="350">
+      <h3>Price: $20 CAD</h3>
+      <p>Post description: Fast charge galaxy smartphones with 15 watt 2 amp speed. Includes 5 ft. Micro USB cable with attached Micro USB to USB-C adapter.</p>
+      <a href = "">Read More</a>
+    </div>
 
 </body>
 </html>
