--- a/SkullCandy.html
+++ b/SkullCandy.html
@@ -71,6 +71,22 @@
   <p>SkullCandy Products</p>
   <hr class="bar">
   <p> </p>
+<div class ="product">
+      <h2>SkullCandy Push ANC Active earbud</h2>
+      <img src = "images/push-anc-active-earbuds.jpg" width="350" height="350">
+      <h3>Price: $180 CAD</h3>
+      <p>Post description: Zero-compromise active earbud for the athlete who doesn’t hold back. Comfortable, low-profile ear hangers, fully waterproof construction, adjustable Stay-Aware mode and 4-Mic active noise canceling to get you in the zone.</p>
+      <a href = "">Read More</a>
+    </div>
 
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>SkullCandy Crusher ANC 2</h2>
+      <img src = "images/crusher-anc-2.jpg" width="350" height="350">
+      <h3>Price: $130 CAD</h3>
+      <p>Post description: Personal Sound and hands-free voice control plus a blend of adjustable 4-mic digital active noise canceling and Crusher Bass that’s so perfect, we had it patented. Experience full sound and amazing bass you can actually feel.</p>
+      <a href = "">Read More</a>
+    </div>
 </body>
 </html>
