--- a/Cases.html
+++ b/Cases.html
@@ -60,6 +60,22 @@
   <p>Case Products</p>
   <hr class="bar">
   <p> </p>
+<div class ="product">
+      <h2>iPhone 16 Pro Silicone Case with MagSafe</h2>
+      <img src = "images/iphone-16pro-silicone-case.jpg" width="350" height="350">
+      <h3>Price: $70 CAD</h3>
+      <p>Post description: Made with a 55 per cent recycled silicone material, works seamlessly with Camera Control. With built-in magnets that align perfectly with iPhone 16 Pro, this case offers a magical attach experience and faster wireless charging, every time.</p>
+      <a href = "">Read More</a>
+    </div>
 
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>iPhone 16 Silicone Case with MagSafe</h2>
+      <img src = "images/iphone16-silicone-case.jpg" width="350" height="350">
+      <h3>Price: $70 CAD</h3>
+      <p>Post description: Made with a 55 per cent recycled silicone material, works seamlessly with Camera Control. With built-in magnets that align perfectly with iPhone 16, this case offers a magical attach experience and faster wireless charging, every time.</p>
+      <a href = "">Read More</a>
+    </div>
 </body>
 </html>
