--- a/Cables.html
+++ b/Cables.html
@@ -60,6 +60,30 @@
   <p>Cable Products</p>
   <hr class="bar">
   <p> </p>
+<div class ="product">
+      <h2>Apple 240W USB-C Charge Cable (2m)</h2>
+      <img src = "images/apple-240w-usb-c.jpg" width="350" height="350">
+      <h3>Price: $35 CAD</h3>
+      <p>Post description: 2-metre charging cable is made with a woven design with USB-C connectors on both ends and is ideal for charging, syncing and transferring data between USB-C devices. Supports charging of up to 240 watts and transfers data at USB 2 rates.</p>
+      <a href = "">Read More</a>
+    </div>
 
+    <hr class="bar">
+
+    <div class ="product">
+      <h2>Apple USB-C to Lightning Cable (2m)</h2>
+      <img src = "apple-usb-c-lightning.jpg" width="350" height="350">
+      <h3>Price: $40 CAD</h3>
+      <p>Post description: Connect your device with Lightning connector to your USB-C or Thunderbolt-3 (USB-C) enabled device for syncing and charging. Can also use this cable with your Apple 18W, 20W, 29W, 30W, 61W, 87W or 96W USB‑C Power Adapter to charge your iOS device.</p>
+      <a href = "">Read More</a>
+    </div>
+<div class ="product">
+      <h2>Samsung Fast Charge Travel Charger with Micro USB and USB-C combo cable</h2>
+      <img src = "images/travel-charger-micro-usb-c.jpg" width="350" height="350">
+      <h3>Price: $20 CAD</h3>
+      <p>Post description: Fast charge galaxy smartphones with 15 watt 2 amp speed. Includes 5 ft. Micro USB cable with attached Micro USB to USB-C adapter.</p>
+      <a href = "">Read More</a>
+    </div>
+    <hr class="bar">
 </body>
 </html>
