--- a/Apple.html
+++ b/Apple.html
@@ -78,7 +78,7 @@
 <!--manual coding for product list-->
 <div class ="product">
     <h2>Apple AirPods 4</h2>
-    <img src = "images/airpods-4.jpg">
+    <img src = "images/airpods-4.jpg" width="350" height="350">
     <h3>Price: $250 CAD</h3>
     <p>Post description: Powerful H2 chip delivers clearer calls with voice isolation and a new, hands-free way to interact with Siri. Personalised spatial audio with dynamic head tracking places sound all around you. Rated IP54 dust, sweat and water resistant.</p>
     <a href = "">Read More</a>
@@ -88,7 +88,7 @@
     
     <div class ="product">
       <h2>Apple AirPods Pro 2</h2>
-      <img src = "images/airpods-pro-2.jpg">
+      <img src = "images/airpods-pro-2.jpg" width="350" height="350">
       <h3>Price: $330 CAD</h3>
       <p>Post description: Pro-level active noise cancellation, adaptive audio for the right mix of noise control in any environment, transparency mode to hear the world around you and conversation awareness to seamlessly lower your media volume when you speak to someone nearby. IP54 dust, sweat, and water resistant.</p>
       <a href = "">Read More</a>
@@ -98,7 +98,7 @@
 
     <div class ="product">
       <h2>Apple 240W USB-C Charge Cable (2m)</h2>
-      <img src = "images/apple-240w-usb-c.jpg">
+      <img src = "images/apple-240w-usb-c.jpg" width="350" height="350">
       <h3>Price: $35 CAD</h3>
       <p>Post description: 2-metre charging cable is made with a woven design with USB-C connectors on both ends and is ideal for charging, syncing and transferring data between USB-C devices. Supports charging of up to 240 watts and transfers data at USB 2 rates.</p>
       <a href = "">Read More</a>
@@ -108,7 +108,7 @@
 
     <div class ="product">
       <h2>Apple USB-C to Lightning Cable (2m)</h2>
-      <img src = "images/airpods-pro-2.jpg">
+      <img src = "images/apple-usb-c-lightning.jpg"  width="350" height="350">
       <h3>Price: $40 CAD</h3>
       <p>Post description: Connect your device with Lightning connector to your USB-C or Thunderbolt-3 (USB-C) enabled device for syncing and charging. Can also use this cable with your Apple 18W, 20W, 29W, 30W, 61W, 87W or 96W USB‑C Power Adapter to charge your iOS device.</p>
       <a href = "">Read More</a>
@@ -118,7 +118,7 @@
 
     <div class ="product">
       <h2>iPhone 16 Pro Silicone Case with MagSafe</h2>
-      <img src = "images/airpods-pro-2.jpg">
+      <img src = "images/iphone-16pro-silicone-case.jpg" width="350" height="350">
       <h3>Price: $70 CAD</h3>
       <p>Post description: Made with a 55 per cent recycled silicone material, works seamlessly with Camera Control. With built-in magnets that align perfectly with iPhone 16 Pro, this case offers a magical attach experience and faster wireless charging, every time.</p>
       <a href = "">Read More</a>
@@ -128,7 +128,7 @@
 
     <div class ="product">
       <h2>iPhone 16 Silicone Case with MagSafe</h2>
-      <img src = "images/airpods-pro-2.jpg">
+      <img src = "images/iphone16-silicone-case.jpg" width="350" height="350">
       <h3>Price: $70 CAD</h3>
       <p>Post description: Made with a 55 per cent recycled silicone material, works seamlessly with Camera Control. With built-in magnets that align perfectly with iPhone 16, this case offers a magical attach experience and faster wireless charging, every time.</p>
       <a href = "">Read More</a>
