--- a/AllProducts.html
+++ b/AllProducts.html
@@ -102,7 +102,7 @@
 
     <div class ="product">
       <h2>Apple USB-C to Lightning Cable (2m)</h2>
-      <img src = "apple-usb-c-lightning.jpg" width="350" height="350">
+      <img src = "images/apple-usb-c-lightning.jpg" width="350" height="350">
       <h3>Price: $40 CAD</h3>
       <p>Post description: Connect your device with Lightning connector to your USB-C or Thunderbolt-3 (USB-C) enabled device for syncing and charging. Can also use this cable with your Apple 18W, 20W, 29W, 30W, 61W, 87W or 96W USB‑C Power Adapter to charge your iOS device.</p>
       <a href = "">Read More</a>
