--- a/Cables.html
+++ b/Cables.html
@@ -78,6 +78,8 @@
       <a href = "">Read More</a>
     </div>
     
+    <hr class="bar">
+    
 <div class ="product">
       <h2>Samsung Fast Charge Travel Charger with Micro USB and USB-C combo cable</h2>
       <img src = "images/travel-charger-micro-usb-c.jpg" width="350" height="350">
