--- a/Apple.html
+++ b/Apple.html
@@ -176,7 +176,8 @@ function topFunction() {
       <p>Post description: Made with a 55 per cent recycled silicone material, works seamlessly with Camera Control. With built-in magnets that align perfectly with iPhone 16, this case offers a magical attach experience and faster wireless charging, every time.</p>
       <a href = "">Read More</a>
     </div>
-
+<hr class="bar">
+    <p>      </p>
     
 
   <!--------------------------------->  
