--- a/Apple.html
+++ b/Apple.html
@@ -16,7 +16,7 @@
     font-size: 18px;
     border: none;
     outline: none;
-    background-color: #0056b3;
+    background-color: #03045E;
     color: white;
     cursor: pointer;
     padding: 15px;
@@ -24,7 +24,7 @@
   }
   
   #myBtn:hover {
-    background-color: #90E0EF;
+    background-color: #0b7dda;
   }
 
 </style>
