--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p>SmartTech offers a variety of electronic accessories from different brands. From apple to Samsung and other smaller brands, shop here today.</p>
   </div>
          
-  <p>Broswe through all our products here.</p>
+  <p>Browse through all our products here.</p>
   <a href="./AllProducts.html"><button class="navbutton">All Products</button></a>
 
   <p>                        </p>       
