--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <p> </p>
 
 <!-- search bar -->
-  <form class="example" action="/action_page.php" style="margin:auto;max-width:400px">
+  <form class="example" action="/action_page.php" style="margin:auto;max-width:400px;margin-bottom: 20px;">
     <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
