--- a/Apple.html
+++ b/Apple.html
@@ -65,13 +65,11 @@
             <h1>Cart</h1>
         <div class="listCart"></div>
           <div class="btn">
-            <button class="close">CLOSE</button>
-            <button class="checkOut">CHECK OUT</button>
+            <button class="close" onclick="closeForm()">CLOSE</button>
+            <button class="checkOut" >CHECK OUT</button>
           </div>
         </div>
             
-          <button type="submit" class="btn">Checkout</button>
-          <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
       </div>
       
