--- a/Apple.html
+++ b/Apple.html
@@ -57,11 +57,9 @@
       <div class="icon-cart">
         <button class="open-button" onclick="openForm()">Cart</button>
       </div>
-        
-       <div class="form-popup" id="myForm">
-        <form action="/action_page.php" class="form-container">
 
-        <div class="cartTab">
+        <div class="cartTab" id="myForm">
+            <form action="/action_page.php" class="form-container">
             <h1>Cart</h1>
         <div class="listCart"></div>
           <div class="btn">
@@ -137,7 +135,7 @@ function topFunction() {
     </div>
   </div>
 
-    <<!--
+    <!--
   <div class="cartTab">
     <h1>Cart</h1>
     <div class="listCart">
