--- a/Apple.html
+++ b/Apple.html
@@ -63,7 +63,7 @@
          <div class="listCart">
       </div>
       <div class="btn">
-        <button class="close">CLOSE</button>
+        <button class="close" onclick="closeForm()">CLOSE</button>
         <button class="checkOut">CHECK OUT</button>
       </div>
     </div>
