--- a/Apple.html
+++ b/Apple.html
@@ -54,23 +54,18 @@
     <!-- Right-aligned links -->
     <div class="topnav-right">
   
-      <button class="open-button" onclick="openForm()">Cart</button>
+  <button class="open-button" onclick="openForm()">Cart</button>
        <div class="form-popup" id="myForm">
-         <form action="/action_page.php" class="form-container">
-         
-       <div class="cartTab">
-         <h1>Cart</h1>
-         <div class="listCart">
-      </div>
+        <form action="/action_page.php" class="form-container">
+
+        <h1>Cart</h1>
+          <div class="listCart"></div>
       <div class="btn">
-        <button class="close" onclick="closeForm()">CLOSE</button>
+        <button class="close" onclick="closeForm()>CLOSE</button>
         <button class="checkOut">CHECK OUT</button>
       </div>
-    </div>
-            
         </form>
-       </div>
-     </div>
+      </div>
 
     <script>
         function openForm() {
