--- a/Apple.html
+++ b/Apple.html
@@ -61,6 +61,15 @@
           <p>Cart</p>
           <hr class="bar">
           <p>Item list</p>
+
+    <div class="cartTab">
+        <h1>Cart</h1>
+        <div class="listCart"></div>
+      <div class="btn">
+        <button class="close">CLOSE</button>
+        <button class="checkOut">CHECK OUT</button>
+      </div>
+    </div>
           
           <button type="submit" class="btn">Checkout</button>
           <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
