--- a/Apple.html
+++ b/Apple.html
@@ -126,6 +126,42 @@ function topFunction() {
         <div class="price">$250</div>
         <button class="addCart">Add To Cart</button> 
       </div>
+
+        <div class="item">
+        <img src="images/airpods-pro-2.jpg" alt="AirPodsPro2">
+        <h2>Apple AirPods Pro 2</h2>
+        <div class="price">$330</div>
+        <button class="addCart">Add To Cart</button> 
+      </div>
+
+        <div class="item">
+        <img src="images/apple-240w-usb-c.jpg" alt="240W-USB-C-Charge-Cable(2m)">
+        <h2>Apple 240W USB-C Charge Cable (2m)</h2>
+        <div class="price">$35</div>
+        <button class="addCart">Add To Cart</button> 
+      </div>
+
+        <div class="item">
+        <img src="images/apple-usb-c-lightning.jpg" alt="USB-C-to-LightningCable(2m)">
+        <h2>Apple USB-C to Lightning Cable (2m)</h2>
+        <div class="price">$40</div>
+        <button class="addCart">Add To Cart</button> 
+      </div>
+
+        <div class="item">
+        <img src="images/iphone-16pro-silicone-case.jpg" alt="iPhone 16 Pro Silicone Case with MagSafe">
+        <h2>iPhone 16 Pro Silicone Case with MagSafe</h2>
+        <div class="price">$70</div>
+        <button class="addCart">Add To Cart</button> 
+      </div>
+
+        <div class="item">
+        <img src="images/iphone16-silicone-case.jpg" alt="iPhone 16 Silicone Case with MagSafe">
+        <h2>iPhone 16 Silicone Case with MagSafe</h2>
+        <div class="price">$70</div>
+        <button class="addCart">Add To Cart</button> 
+      </div>
+   
     </div>
   </div>
 
