--- a/AboutUs.html
+++ b/AboutUs.html
@@ -81,6 +81,12 @@
     <p>Address: 1234 king st west, ON, CA, M4H 2K8</p>
 </div>
 
+<video width="320" height="240" controls>
+  <source src="SmarTech Walkthrough.mp4" type="video/mp4">
+</video>
+
+
+    
 <p> </p>
 <a href="./index.html"><button class="navbutton">Home</button></a>
 <a href="./AllProducts.html"><button class="navbutton">Browse</button></a>
